--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,5 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-  <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-  </a>
+  <%= link_to "Home", root_path, class: "d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" %>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <%= link_to "GitHub Repository", "https://github.com/JhonnyM/build_short_url", class: "nav-link px-2 link-dark" %>
